[gd_scene load_steps=84 format=2]

[ext_resource path="res://LevelProps/Nexus/Light.png" type="Texture" id=1]
[ext_resource path="res://LevelProps/Nexus/Nexus.gd" type="Script" id=2]
[ext_resource path="res://LevelProps/Nexus/Light_unlight.png" type="Texture" id=3]
[ext_resource path="res://LevelProps/Nexus/unexus6-min.png" type="Texture" id=4]
[ext_resource path="res://LevelProps/Nexus/unexus14-min.png" type="Texture" id=5]
[ext_resource path="res://LevelProps/Nexus/unexus7-min.png" type="Texture" id=6]
[ext_resource path="res://LevelProps/Nexus/unexus12-min.png" type="Texture" id=7]
[ext_resource path="res://LevelProps/Nexus/unexus23-min.png" type="Texture" id=8]
[ext_resource path="res://LevelProps/Nexus/unexus17-min.png" type="Texture" id=9]
[ext_resource path="res://LevelProps/Nexus/unexus25-min.png" type="Texture" id=10]
[ext_resource path="res://LevelProps/Nexus/unexus32-min.png" type="Texture" id=11]
[ext_resource path="res://LevelProps/Nexus/unexus9-min.png" type="Texture" id=12]
[ext_resource path="res://LevelProps/Nexus/unexus22-min.png" type="Texture" id=13]
[ext_resource path="res://LevelProps/Nexus/unexus24-min.png" type="Texture" id=14]
[ext_resource path="res://LevelProps/Nexus/unexus31-min.png" type="Texture" id=15]
[ext_resource path="res://LevelProps/Nexus/unexus19-min.png" type="Texture" id=16]
[ext_resource path="res://LevelProps/Nexus/unexus27-min.png" type="Texture" id=17]
[ext_resource path="res://LevelProps/Nexus/unexus8-min.png" type="Texture" id=18]
[ext_resource path="res://LevelProps/Nexus/unexus28-min.png" type="Texture" id=19]
[ext_resource path="res://LevelProps/Nexus/unexus29-min.png" type="Texture" id=20]
[ext_resource path="res://LevelProps/Nexus/unexus26-min.png" type="Texture" id=21]
[ext_resource path="res://LevelProps/Nexus/unexus35-min.png" type="Texture" id=22]
[ext_resource path="res://LevelProps/Nexus/unexus13-min.png" type="Texture" id=23]
[ext_resource path="res://LevelProps/Nexus/unexus34-min.png" type="Texture" id=24]
[ext_resource path="res://LevelProps/Nexus/unexus30-min.png" type="Texture" id=25]
[ext_resource path="res://LevelProps/Nexus/unexus20-min.png" type="Texture" id=26]
[ext_resource path="res://LevelProps/Nexus/unexus21-min.png" type="Texture" id=27]
[ext_resource path="res://LevelProps/Nexus/unexus10-min.png" type="Texture" id=28]
[ext_resource path="res://LevelProps/Nexus/unexus11-min.png" type="Texture" id=29]
[ext_resource path="res://LevelProps/Nexus/unexus16-min.png" type="Texture" id=30]
[ext_resource path="res://LevelProps/Nexus/unexus33-min.png" type="Texture" id=31]
[ext_resource path="res://LevelProps/Nexus/unexus18-min.png" type="Texture" id=32]
[ext_resource path="res://LevelProps/Nexus/unexus39-min.png" type="Texture" id=33]
[ext_resource path="res://LevelProps/Nexus/unexus53-min.png" type="Texture" id=34]
[ext_resource path="res://LevelProps/Nexus/unexus57-min.png" type="Texture" id=35]
[ext_resource path="res://LevelProps/Nexus/unexus41-min.png" type="Texture" id=36]
[ext_resource path="res://LevelProps/Nexus/unexus46-min.png" type="Texture" id=37]
[ext_resource path="res://LevelProps/Nexus/unexus60-min.png" type="Texture" id=38]
[ext_resource path="res://LevelProps/Nexus/unexus63-min.png" type="Texture" id=39]
[ext_resource path="res://LevelProps/Nexus/unexus42-min.png" type="Texture" id=40]
[ext_resource path="res://LevelProps/Nexus/unexus36-min.png" type="Texture" id=41]
[ext_resource path="res://LevelProps/Nexus/unexus40-min.png" type="Texture" id=42]
[ext_resource path="res://LevelProps/Nexus/unexus47-min.png" type="Texture" id=43]
[ext_resource path="res://LevelProps/Nexus/unexus51-min.png" type="Texture" id=44]
[ext_resource path="res://LevelProps/Nexus/unexus61-min.png" type="Texture" id=45]
[ext_resource path="res://LevelProps/Nexus/unexus43-min.png" type="Texture" id=46]
[ext_resource path="res://LevelProps/Nexus/unexus48-min.png" type="Texture" id=47]
[ext_resource path="res://LevelProps/Nexus/unexus56-min.png" type="Texture" id=48]
[ext_resource path="res://LevelProps/Nexus/unexus62-min.png" type="Texture" id=49]
[ext_resource path="res://LevelProps/Nexus/unexus50-min.png" type="Texture" id=50]
[ext_resource path="res://LevelProps/Nexus/unexus52-min.png" type="Texture" id=51]
[ext_resource path="res://LevelProps/Nexus/unexus58-min.png" type="Texture" id=52]
[ext_resource path="res://LevelProps/Nexus/unexus64-min.png" type="Texture" id=53]
[ext_resource path="res://LevelProps/Nexus/unexus49-min.png" type="Texture" id=54]
[ext_resource path="res://LevelProps/Nexus/unexus38-min.png" type="Texture" id=55]
[ext_resource path="res://LevelProps/Nexus/unexus65-min.png" type="Texture" id=56]
[ext_resource path="res://LevelProps/Nexus/unexus54-min.png" type="Texture" id=57]
[ext_resource path="res://LevelProps/Nexus/unexus37-min.png" type="Texture" id=58]
[ext_resource path="res://LevelProps/Nexus/unexus55-min.png" type="Texture" id=59]
[ext_resource path="res://LevelProps/Nexus/unexus59-min.png" type="Texture" id=60]
[ext_resource path="res://LevelProps/Nexus/unexus69-min.png" type="Texture" id=61]
[ext_resource path="res://LevelProps/Nexus/unexus70-min.png" type="Texture" id=62]
[ext_resource path="res://LevelProps/Nexus/unexus72-min.png" type="Texture" id=63]
[ext_resource path="res://LevelProps/Nexus/unexus67-min.png" type="Texture" id=64]
[ext_resource path="res://LevelProps/Nexus/unexus66-min.png" type="Texture" id=65]
[ext_resource path="res://LevelProps/Nexus/unexus73-min.png" type="Texture" id=66]
[ext_resource path="res://LevelProps/Nexus/unexus71-min.png" type="Texture" id=67]
[ext_resource path="res://LevelProps/Nexus/unexus68-min.png" type="Texture" id=68]
[ext_resource path="res://LevelProps/Nexus/unexus45-min.png" type="Texture" id=69]
[ext_resource path="res://LevelProps/Nexus/bonifire2.png" type="Texture" id=70]
[ext_resource path="res://LevelProps/Nexus/bonifire1.png" type="Texture" id=71]
[ext_resource path="res://LevelProps/Nexus/bonifire5.png" type="Texture" id=72]
[ext_resource path="res://LevelProps/Nexus/bonifire6.png" type="Texture" id=73]
[ext_resource path="res://LevelProps/Nexus/bonifire11.png" type="Texture" id=74]
[ext_resource path="res://LevelProps/Nexus/bonifire12.png" type="Texture" id=75]
[ext_resource path="res://LevelProps/Nexus/bonifire4.png" type="Texture" id=76]
[ext_resource path="res://LevelProps/Nexus/bonifire9.png" type="Texture" id=77]
[ext_resource path="res://LevelProps/Nexus/bonifire3.png" type="Texture" id=78]
[ext_resource path="res://LevelProps/Nexus/bonifire7.png" type="Texture" id=79]
[ext_resource path="res://LevelProps/Nexus/bonifire8.png" type="Texture" id=80]
[ext_resource path="res://LevelProps/Nexus/bonifire10.png" type="Texture" id=81]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 90.2839, 55.0886 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 40 ), ExtResource( 46 ), ExtResource( 69 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 47 ), ExtResource( 54 ), ExtResource( 50 ), ExtResource( 44 ), ExtResource( 51 ), ExtResource( 34 ), ExtResource( 57 ), ExtResource( 59 ), ExtResource( 48 ), ExtResource( 35 ), ExtResource( 52 ), ExtResource( 60 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 49 ), ExtResource( 39 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 65 ), ExtResource( 64 ), ExtResource( 68 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 67 ), ExtResource( 63 ), ExtResource( 66 ) ],
"loop": true,
"name": "Light",
"speed": 5.0
}, {
"frames": [ ExtResource( 71 ), ExtResource( 70 ), ExtResource( 78 ), ExtResource( 76 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 77 ), ExtResource( 81 ), ExtResource( 74 ), ExtResource( 75 ) ],
"loop": true,
"name": "notLight",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 7 ), ExtResource( 23 ), ExtResource( 5 ), ExtResource( 30 ), ExtResource( 9 ), ExtResource( 32 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 25 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 41 ), ExtResource( 58 ), ExtResource( 55 ), ExtResource( 33 ), ExtResource( 42 ), ExtResource( 36 ) ],
"loop": false,
"name": "Lighting",
"speed": 30.0
} ]

[node name="Nexus1" type="Area2D"]
light_mask = 1024
position = Vector2( -1493.78, 948.056 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 1024
position = Vector2( -2.72559, 20.3181 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 2 )
animation = "notLight"
frame = 4
playing = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 18 )
scale = Vector2( 0.4, 0.4 )
z_index = 3
z_as_relative = false
enabled = false
texture = ExtResource( 1 )
energy = 0.1
range_item_cull_mask = 1024

[node name="Light2D2" type="Light2D" parent="."]
light_mask = 1024
position = Vector2( -3, 7 )
z_index = 3
z_as_relative = false
texture = ExtResource( 3 )
energy = 0.1
[connection signal="body_entered" from="." to="." method="_on_save1_bonfire_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Nexus1_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
